@@ -12,6 +12,8 @@ Revision history for Perl module CPAN::Mini::Webserver:
      - display the installed version of a distribution (patch by
        corion)
      - add an "Install" button, very alpha (patch by corion)
+     - make /dist/Some-Distname work and extract redirect and 404
+       support into their own methods (patch by jesse)
 
 0.38 Mon Aug 18 09:15:25 BST 2008
      - fix bug which repeated metadata (spotted by claes)
